possible fix to Dan's photo upload issue on Android.  Also reverted styling on file_field (photo) in new post form so that it works on IE

--- a/app/assets/stylesheets/posts_create.css.scss
+++ b/app/assets/stylesheets/posts_create.css.scss
@@ -27,11 +27,11 @@
 	label.row {
 		margin: 0;
 	}
-	> .controls.thumbnail > input[type="file"] {
-		position: absolute;
-		top: -9999px;
-		left: -9999px;
-	}
+	//> .controls.thumbnail > input[type="file"] {
+	//	position: absolute;
+	//	top: -9999px;
+	//	left: -9999px;
+	//}
 	.controls.thumbnail {
 		font-size: $font-size;
 		margin: ($font-size * .25) auto;
